--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<script>
-  windows.location.href="https://www.baidu.com/"
-</script>
+<script language="javascript" type="text/javascript">            
+  window.location.href="http://www.baidu.com/";     
+</script> 
